Update Meteor Example (plugin and app)

--- a/Meteor/Plugin/jscrambler/plugin/jscrambler_config.json
+++ b/Meteor/Plugin/jscrambler/plugin/jscrambler_config.json
@@ -1,11 +1,11 @@
 {
   "keys": {
-    "accessKey": "EF03911EA67AA8542C5A98B1D4779C27B88B9B95",
-    "secretKey": "C1517E2F98423247193E907486436D8D300B2B80"
+    "accessKey": "ACCESS_KEY",
+    "secretKey": "SECRET_KEY"
   },
   "host": "api4.jscrambler.com",
   "port": 443,
-  "applicationId": "5911dea8f0ef190011fd5beb",
+  "applicationId": "APP_ID",
   "params": [
     {
       "name": "whitespaceRemoval"
