--- a/Angular/Example-Apps/angular4-todo-app/package.json
+++ b/Angular/Example-Apps/angular4-todo-app/package.json
@@ -1,49 +1,48 @@
 {
-  "name": "todo-app-angular",
-  "version": "1.0.0",
+  "name": "todo-app",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --prod; jscrambler",
+    "build:prod": "ng build --prod && jscrambler",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.5",
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.5",
-    "@angular/http": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/router": "^4.4.5",
+    "@angular/common": "^4.2.5",
+    "@angular/compiler": "^4.2.5",
+    "@angular/core": "^4.2.5",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.2.5",
+    "@angular/router": "^4.2.5",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.4.1",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^4.4.5",
-    "@angular/language-service": "^4.4.5",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "jscrambler": "^1.3.3",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "@angular/cli": "^1.2.0",
+    "@angular/compiler-cli": "^4.2.5",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "~6.0.79",
+    "codelyzer": "^3.1.1",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
+    "jscrambler": "^5.2.14",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "ts-node": "^3.1.0",
+    "tslint": "^5.4.3",
+    "typescript": "2.3.*"
   }
 }
