--- a/ReactNative/Example-Apps/react-native-grocery-list/android/app/build.gradle
+++ b/ReactNative/Example-Apps/react-native-grocery-list/android/app/build.gradle
@@ -73,7 +73,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js"
+    entryFile: "index.js",
     bundleInDebug: true
 ]
 
