--- a/ReactNative/Example-Apps/react-native-grocery-list/package.json
+++ b/ReactNative/Example-Apps/react-native-grocery-list/package.json
@@ -7,12 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.3.3",
+    "@react-native-community/async-storage": "1.3.3",
     "react": "16.8.3",
     "react-native": "0.59.5",
-    "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.9.1",
-    "uuid": "^3.3.2"
+    "react-native-gesture-handler": "1.1.0",
+    "react-navigation": "3.9.1",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
