--- a/ReactNative/Example-Apps/react-native0.62-grocery-list/android/app/build.gradle
+++ b/ReactNative/Example-Apps/react-native0.62-grocery-list/android/app/build.gradle
@@ -134,6 +134,13 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-O2 -frtti -fexceptions -Wall -fstack-protector-all"
+                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+            }
+        }
     }
     splits {
         abi {
@@ -183,6 +190,12 @@ android {
                         versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
             }
 
+        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "../../cpp_code/CMakeLists.txt"
         }
     }
 }
