--- a/ReactNative/Example-Apps/react-native0.62-grocery-list/android/build.gradle
+++ b/ReactNative/Example-Apps/react-native0.62-grocery-list/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+        ndkVersion = "20.1.5948944"
     }
     repositories {
         google()
