--- a/ReactNative/Example-Apps/react-native0.64-grocery-list/package.json
+++ b/ReactNative/Example-Apps/react-native0.64-grocery-list/package.json
@@ -16,10 +16,10 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react-native": "^0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
     "util": "^0.12.3",
