--- a/ReactNative/Example-Apps/react-native0.64-grocery-list/android/app/build.gradle
+++ b/ReactNative/Example-Apps/react-native0.64-grocery-list/android/app/build.gradle
@@ -136,7 +136,15 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-O2 -frtti -fexceptions -Wall -fstack-protector-all"
+                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+            }
+        }
     }
+
     splits {
         abi {
             reset()
@@ -179,6 +187,12 @@ android {
                         defaultConfig.versionCode * 1000 + versionCodes.get(abi)
             }
 
+        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "../../cpp_code/CMakeLists.txt"
         }
     }
 }
