--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Protect e2e Test
+    name: Protect Playground
     environment: production
     steps:
       - uses: actions/checkout@v3
@@ -21,8 +21,7 @@ jobs:
           access-key: ${{ secrets.JSCRAMBLER_ACCESS_KEY }}
           jscrambler-config-path: GitHubAction/Playground/jscrambler.json
           files-src: |
-            GitHubAction/Playground/**
-            !GitHubAction/Playground/jcrambler.json
+            GitHubAction/**/!(jscrambler.json)
           files-dest: GitHubAction/Playground/dist
           source-maps: true
           source-maps-output-path: GitHubAction/Playground/dist-sourcemaps/
