ci(github-action): no source-maps

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
           files-src: |
             GitHubAction/**/!(jscrambler.json)
           files-dest: GitHubAction/Playground/dist
-          source-maps: true
+          source-maps: false
           source-maps-output-path: GitHubAction/Playground/dist-sourcemaps/
 
       ## Upload Artifacts
